{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 12399,
  "lineage": "0f6023ae-85b8-3ccb-cdae-5fe560125e3b",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-0e3040d38ba76434f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3040d38ba76434f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003c8e4461c53e577",
            "private_dns": "ip-10-0-101-108.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.108",
            "public_ip": "54.169.33.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8e83b7ff9ab5037",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f85828a5049800b1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0956e432643571ff2",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f85828a5049800b1"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.bastion_key",
            "module.key_pair.tls_private_key.bastion_key",
            "module.security_group.aws_security_group.bastion_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-03716ae497da6a77e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-master-ec2-instance-profile",
            "id": "i-03716ae497da6a77e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0196cfce14e929d2c",
            "private_dns": "ip-10-0-101-163.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd91bb41a40906ff",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0956e432643571ff2",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06060f39eaad3e4cc"
            ]
          },
          "dependencies": [
            "module.iam_role.aws_iam_instance_profile.jenkins_master_ec2_instance_profile",
            "module.iam_role.aws_iam_role.jenkins_master_iam_role",
            "module.key_pair.aws_key_pair.my_generated_key_pair",
            "module.key_pair.tls_private_key.my_generated_key",
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "portainer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c718cb2fa58687f",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:instance/i-0548857ba53fd13e0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "portainer-ec2-instance-profile",
            "id": "i-0548857ba53fd13e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050510f718f7dd7b0",
            "private_dns": "ip-10-0-101-149.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0775f3372a217bce1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0956e432643571ff2",
            "tags": {
              "Environment": "dev",
              "Name": "portainer",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "portainer",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08675402015a6eac3"
            ]
          },
          "dependencies": [
            "module.iam_role.aws_iam_instance_profile.portainer_ec2_instance_profile",
            "module.iam_role.aws_iam_role.portainer_iam_role",
            "module.key_pair.aws_key_pair.my_generated_key_pair",
            "module.key_pair.tls_private_key.my_generated_key",
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ae699d7a146ece5",
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:elastic-ip/eipalloc-06ae699d7a146ece5",
            "domain": "vpc",
            "id": "eipalloc-06ae699d7a146ece5",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-138-145-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.145.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:internet-gateway/igw-0ed51cbb5258ad87b",
            "id": "igw-0ed51cbb5258ad87b",
            "owner_id": "473154593366",
            "tags": {
              "Environment": "dev",
              "Name": "my-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_agent_ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-0df4a8624627637b5",
            "dns_entry": [
              {
                "dns_name": "vpce-0df4a8624627637b5-b2vne3gz.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0df4a8624627637b5-b2vne3gz-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0df4a8624627637b5-b2vne3gz-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0df4a8624627637b5-b2vne3gz-ap-southeast-1c.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0df4a8624627637b5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-014ad27361db62c26",
              "eni-0307c7e89011bf33e",
              "eni-08b17ec1061634653"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dd1c271a1fc7f386"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.102",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.186",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.239",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_agent_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-042e8f6a088a65ae3",
            "dns_entry": [
              {
                "dns_name": "vpce-042e8f6a088a65ae3-i7pwxtbx.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-042e8f6a088a65ae3-i7pwxtbx-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-042e8f6a088a65ae3-i7pwxtbx-ap-southeast-1c.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-042e8f6a088a65ae3-i7pwxtbx-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-042e8f6a088a65ae3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bbff235d226f94b8",
              "eni-0dbf927bcbdbc3d5d",
              "eni-0f81fa80abfeeb610"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dd1c271a1fc7f386"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.226",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.61",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.213",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_agent_ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-0799dff3ae9161b12",
            "dns_entry": [
              {
                "dns_name": "vpce-0799dff3ae9161b12-wzulsw3n.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0799dff3ae9161b12-wzulsw3n-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0799dff3ae9161b12-wzulsw3n-ap-southeast-1c.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0799dff3ae9161b12-wzulsw3n-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0799dff3ae9161b12",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0213a95f5c9e34179",
              "eni-0726f97a87ecdf6af",
              "eni-0e1f5c4b6caf74ae4"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dd1c271a1fc7f386"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.84",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.87",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.74",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_master_ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-0e78caed216f09f5a",
            "dns_entry": [
              {
                "dns_name": "vpce-0e78caed216f09f5a-1xpw1syz.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e78caed216f09f5a-1xpw1syz-ap-southeast-1c.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e78caed216f09f5a-1xpw1syz-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e78caed216f09f5a-1xpw1syz-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e78caed216f09f5a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035032dc083d90b43",
              "eni-07150fe45bd7b6188",
              "eni-0abb56194912c2c03"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06060f39eaad3e4cc"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.188",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.204",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.41",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_master_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-098a9338cf94ef7bd",
            "dns_entry": [
              {
                "dns_name": "vpce-098a9338cf94ef7bd-97tksz4v.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098a9338cf94ef7bd-97tksz4v-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098a9338cf94ef7bd-97tksz4v-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098a9338cf94ef7bd-97tksz4v-ap-southeast-1c.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-098a9338cf94ef7bd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03894119adfd08681",
              "eni-0765d6e867c209694",
              "eni-07e7bcf94320e57c2"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06060f39eaad3e4cc"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.239",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.164",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.146",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "jenkins_master_ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-098add55810a7e2e4",
            "dns_entry": [
              {
                "dns_name": "vpce-098add55810a7e2e4-zh7r50kv.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098add55810a7e2e4-zh7r50kv-ap-southeast-1c.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098add55810a7e2e4-zh7r50kv-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-098add55810a7e2e4-zh7r50kv-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-098add55810a7e2e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02ed8e0feb51cd010",
              "eni-0639bd4a0eec9e3c0",
              "eni-0adb42d4003fa2328"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06060f39eaad3e4cc"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.153",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.224",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.110",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "portainer_ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-0f88dcd19a3a7f605",
            "dns_entry": [
              {
                "dns_name": "vpce-0f88dcd19a3a7f605-4ux305td.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f88dcd19a3a7f605-4ux305td-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f88dcd19a3a7f605-4ux305td-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f88dcd19a3a7f605-4ux305td-ap-southeast-1c.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f88dcd19a3a7f605",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b3897ed87b9a1b9",
              "eni-05d29574e7aed571d",
              "eni-0b00c3d505545b2d7"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08675402015a6eac3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.132",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.246",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.79",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "portainer_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-0e14ebae1b09ffb23",
            "dns_entry": [
              {
                "dns_name": "vpce-0e14ebae1b09ffb23-1xzc5cq4.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e14ebae1b09ffb23-1xzc5cq4-ap-southeast-1c.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e14ebae1b09ffb23-1xzc5cq4-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0e14ebae1b09ffb23-1xzc5cq4-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e14ebae1b09ffb23",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-041ca612db2376c80",
              "eni-087cdbf2e82453ffc",
              "eni-08a49b9fef7f0fa2c"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08675402015a6eac3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.217",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.37",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.153",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "portainer_ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc-endpoint/vpce-07f72eec894eb7937",
            "dns_entry": [
              {
                "dns_name": "vpce-07f72eec894eb7937-mwnszvet.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07f72eec894eb7937-mwnszvet-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07f72eec894eb7937-mwnszvet-ap-southeast-1c.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07f72eec894eb7937-mwnszvet-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07f72eec894eb7937",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03b13b4219fa6595c",
              "eni-042719480323e7fa8",
              "eni-0e1fb1b6806d28992"
            ],
            "owner_id": "473154593366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08675402015a6eac3"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.158",
                "subnet_id": "subnet-0956e432643571ff2"
              },
              {
                "ipv4": "10.0.102.184",
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "ipv4": "10.0.103.30",
                "subnet_id": "subnet-041e60b978b0520da"
              }
            ],
            "subnet_ids": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ae699d7a146ece5",
            "association_id": "eipassoc-0f3c9eb9652f8c474",
            "connectivity_type": "public",
            "id": "nat-02fa5d571e1919012",
            "network_interface_id": "eni-051b2dd67811eee96",
            "private_ip": "10.0.101.113",
            "public_ip": "18.138.145.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0956e432643571ff2",
            "tags": {
              "Environment": "dev",
              "Name": "my-nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-nat-gateway",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.nlb_eip",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/33759fb875f17054",
            "arn_suffix": "app/my-application-load-balancer/33759fb875f17054",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-application-load-balancer-908207007.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/33759fb875f17054",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06060f39eaad3e4cc",
              "sg-08675402015a6eac3",
              "sg-0dd1c271a1fc7f386",
              "sg-0f85828a5049800b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "subnet_id": "subnet-041e60b978b0520da"
              },
              {
                "subnet_id": "subnet-0956e432643571ff2"
              }
            ],
            "subnets": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "tags": {
              "Name": "My-ALB"
            },
            "tags_all": {
              "Name": "My-ALB"
            },
            "vpc_id": "vpc-0acd926f940595522",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "arn_suffix": "net/my-nlb/18ed65afad6af82e",
            "dns_name": "my-nlb-18ed65afad6af82e.elb.ap-southeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "my-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "subnet_id": "subnet-041e60b978b0520da"
              },
              {
                "subnet_id": "subnet-0956e432643571ff2"
              }
            ],
            "subnets": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_id": "vpc-0acd926f940595522",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "arn_suffix": "net/my-nlb/18ed65afad6af82e",
            "dns_name": "my-nlb-18ed65afad6af82e.elb.ap-southeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "my-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "subnet_id": "subnet-041e60b978b0520da"
              },
              {
                "subnet_id": "subnet-0956e432643571ff2"
              }
            ],
            "subnets": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_id": "vpc-0acd926f940595522",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "arn_suffix": "net/my-nlb/18ed65afad6af82e",
            "dns_name": "my-nlb-18ed65afad6af82e.elb.ap-southeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/net/my-nlb/18ed65afad6af82e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "my-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f2c4e965088f9c0"
              },
              {
                "subnet_id": "subnet-041e60b978b0520da"
              },
              {
                "subnet_id": "subnet-0956e432643571ff2"
              }
            ],
            "subnets": [
              "subnet-03f2c4e965088f9c0",
              "subnet-041e60b978b0520da",
              "subnet-0956e432643571ff2"
            ],
            "vpc_id": "vpc-0acd926f940595522",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404 Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:loadbalancer/app/my-application-load-balancer/33759fb875f17054",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_load_balancer.aws_lb.alb",
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-target-group/cc614a96722c5fe0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d/43256956640b525d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d/43256956640b525d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_load_balancer.aws_lb.alb",
            "module.network_load_balancer.aws_lb_listener.http_listener",
            "module.network_load_balancer.aws_lb_target_group.jenkins",
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "portainer_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-target-group/d2a06cc07eb24027",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d/aa26c4d23c6cc6e6",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "portainer.aditya-kristianto.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener-rule/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d/aa26c4d23c6cc6e6",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:listener/app/my-application-load-balancer/33759fb875f17054/5d3a6625f876347d",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_load_balancer.aws_lb.alb",
            "module.network_load_balancer.aws_lb_listener.http_listener",
            "module.network_load_balancer.aws_lb_target_group.portainer",
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.jenkins_agent_sg",
            "module.security_group.aws_security_group.jenkins_master_sg",
            "module.security_group.aws_security_group.portainer_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-target-group/cc614a96722c5fe0",
            "arn_suffix": "targetgroup/jenkins-target-group/cc614a96722c5fe0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/jenkins-target-group/cc614a96722c5fe0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "portainer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-target-group/d2a06cc07eb24027",
            "arn_suffix": "targetgroup/portainer-target-group/d2a06cc07eb24027",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:473154593366:targetgroup/portainer-target-group/d2a06cc07eb24027",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portainer-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:route-table/rtb-054cae8ff40adb905",
            "id": "rtb-054cae8ff40adb905",
            "owner_id": "473154593366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed51cbb5258ad87b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd926f940595522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0981cbc5161daa43e",
            "route_table_id": "rtb-054cae8ff40adb905",
            "subnet_id": "subnet-0956e432643571ff2"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0f85828a5049800b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f85828a5049800b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "2001:448a:2061:8ff7:78e8:3995:8f63:99a/128"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241113153958451000000002",
            "name_prefix": "terraform-",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bastion-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd926f940595522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-0dd1c271a1fc7f386",
            "description": "Security group for Jenkins Agent EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd1c271a1fc7f386",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-agent-sg",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-agent-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-agent-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd926f940595522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-06060f39eaad3e4cc",
            "description": "Security group for Jenkins Master EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06060f39eaad3e4cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd926f940595522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portainer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:security-group/sg-08675402015a6eac3",
            "description": "Security group for Portainer EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08675402015a6eac3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "portainer-sg",
            "name_prefix": "",
            "owner_id": "473154593366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "portainer-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "portainer-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd926f940595522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-054a6fb671420a901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a6fb671420a901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0dc3514ba047382c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc3514ba047382c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-04e0663b84cd28b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e0663b84cd28b97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-subnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-0956e432643571ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0956e432643571ff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-03f2c4e965088f9c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f2c4e965088f9c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:subnet/subnet-041e60b978b0520da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e60b978b0520da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473154593366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-subnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0acd926f940595522"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473154593366:vpc/vpc-0acd926f940595522",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002d06dfae507886f",
            "default_route_table_id": "rtb-0872c5d05b5fb9959",
            "default_security_group_id": "sg-00a6d816f4a7c40e9",
            "dhcp_options_id": "dopt-0c8460a0e8b4bef2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acd926f940595522",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0872c5d05b5fb9959",
            "owner_id": "473154593366",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}